# Flash-Loan-Attack-Detection

./: .gitignore  AGENTS.md  CLAUDE.md  DATA_SOURCE_MIGRATION.md  DISTRIBUTED_SYSTEM_ANALYSIS.md  FRONTEND_NEXT_SESSION.md  GETTING_STARTED_MONGODB.txt  MAC_MIGRATION.md  MIGRATION_COMPLETE.txt  MONGODB_DATA_SOURCE.md  MONGODB_MIGRATION_CODE.md  MONGODB_MIGRATION_SUMMARY.md  README.md  README_MONGODB_MIGRATION.md  Readme.md  START_HERE.txt  docker-compose.yml  export_detections.py  generate_attack_scenarios.py  implementation_plan.md  package-lock.json  requirements.txt  schema.md  session-debug-price-valuation.md  spark-ui-walkthrough.md  sse_implementation_report.md  walkthrough.md
Back_End/: Main.py
abis/: aave_v3_pool.json  uniswap_v3_pool.json
backend/: .gitignore  Dockerfile  Main.py  README.md  pyproject.toml
benchmarks/: BENCHMARK.md  HOW_TO_RUN.md  fault_tolerance_demo.py  run_benchmark.py  single_process_job.py
broker/: consumer_groups.py  kafka_consumer.py  kafka_producer.py
cache/: Dockerfile  price_feed.py
dashboard/: Dockerfile
data/: detected_flash_loans.csv  test_data.csv  test_data_enriched.csv  test_data_large.csv
db/: Dockerfile  price_feed.py
etherscan_exports/: aav3.csv  aave_v3.csv  balancer_v2.csv  balencer.csv  flash_loan..csv  flash_loan_simple.csv  uniswap.csv  uniswap_v3.csv
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
infra/: .env  Docker-compose.yml
ingestion/: Dockerfile  LISTENER_MP_NOTES.md  config.py  enrich_test_data.py  listener.py  (+4 more)
(+54 files in other folders)
