[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.2.25",
    "fastapi>=0.135.3",
    "pydantic>=2.13.0",
    "pymongo[srv]>=4.16.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "uvicorn>=0.44.0",
]
